WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300315
New compiler warnings
https://bugs.webkit.org/show_bug.cgi?id=300315
Summary
New compiler warnings
Jonathan Bedard
Reported
2025-10-07 05:10:54 PDT
Some Internal builds have new compiler warnings enabled. Resolve them.
Attachments
Add attachment
proposed patch, testcase, etc.
Jonathan Bedard
Comment 1
2025-10-07 05:10:55 PDT
<
rdar://problem/162090534
>
Jonathan Bedard
Comment 2
2025-10-07 05:12:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51937
EWS
Comment 3
2025-10-07 05:29:15 PDT
Committed
301126@main
(441b7d0cd38e): <
https://commits.webkit.org/301126@main
> Reviewed commits have been landed. Closing PR #51937 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug