New compiler warnings https://bugs.webkit.org/show_bug.cgi?id=300315 rdar://162090534

Unreviewed build fix.

* Source/WebCore/testing/WebXRTest.h:
* Source/WebGPU/WebGPU/Buffer.h:
* Source/WebGPU/WebGPU/Buffer.mm:

Canonical link: https://commits.webkit.org/301126@main